--- a/Survey/index.css
+++ b/Survey/index.css
@@ -141,7 +141,7 @@ textarea:invalid {
 }
 
 #submit:hover {
-    background-color: yellowgreen;
+    background-color: teal;
     border: 2px solid #37392E;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
     display: block;
@@ -160,4 +160,31 @@ select:focus {
 
 hr {
     border: 2px solid #F0A202;
+}
+
+
+
+footer{
+    font-family: Tahoma, Geneva, sans-serif;
+    background-color: #37392E;
+    float: right;
+    font-size: 0.7rem;
+    border: 2px solid #F4F9E9;
+    border-radius: 2px 5px 2px 5px;
+    display: block;
+    max-width: 150%;
+    margin: auto;
+    padding: 0.2rem 1rem;
+}
+
+a{
+    color: #F0A202;
+    font-size: 0.7rem;
+    text-decoration: none;
+}
+
+a:hover{
+    color: teal;
+    font-size: 0.7rem;
+    text-decoration: none;
 }
